update(name): Rename date filter terms
I have renamed the date filter terms for clarity:

'Updated Before' to ‘Started Before’
'Updated After' to ‘Ended After’

Issued Id: NCEA-247.

--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -60,7 +60,7 @@
         <div class="govuk-form-group" id="{{dspFilterNames.updatedBefore}}-group-{{filterInstance}}">
           <fieldset class="govuk-fieldset" role="group" aria-describedby="{{dspFilterNames.updatedBefore}}-hint-{{filterInstance}} {{dspFilterNames.updatedBefore}}-error-{{filterInstance}}">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              Updated Before
+              Started Before
             </legend>
             <div id="{{dspFilterNames.updatedBefore}}-hint-{{filterInstance}}" class="govuk-hint">
               For example, 2004
@@ -84,7 +84,7 @@
         <div class="govuk-form-group" id="{{dspFilterNames.updatedAfter}}-group-{{filterInstance}}">
           <fieldset class="govuk-fieldset" role="group" aria-describedby="{{dspFilterNames.updatedAfter}}-hint-{{filterInstance}} {{dspFilterNames.updatedAfter}}-error-{{filterInstance}}">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              Updated After
+              Ended After
             </legend>
             <div id="{{dspFilterNames.updatedAfter}}-hint-{{filterInstance}}" class="govuk-hint">
               For example, 2015
