fix(filters): Filter drop down not animating on selection and Typo on Licence filter in UI
I have fixed the typo on Licence filter name.
Added the animation on the drop down arraow.

Issued Id: NCEA-244, 248.

--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -647,6 +647,11 @@
   color: #0b0c0c;
 }
 
+.filter-options__accordion-toggle[data-expanded='true'] > svg {
+  transition: all 0.3s ease-in-out;
+  transform: rotate(180deg);
+}
+
 .filter-options__retired-label {
   color: #194578;
 }
