--- a/src/views/partials/results/badges.njk
+++ b/src/views/partials/results/badges.njk
@@ -24,7 +24,7 @@
 {% endif %}
 
 {% if (dspFilterOptions.licence | length) > 0 %}
-  {{ badge("License", dspFilterOptions.licence) }}
+  {{ badge("Licence", dspFilterOptions.licence) }}
 {% endif %}
 
 {% for keyword in dspFilterOptions.keywords %}
