fix(about page): Update links to NCEA partner sites so links from text rather than logo
- I have added the partner name to the partner image links.

Issued Id: NCEA-254.

--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -11,8 +11,8 @@
     display: flex;
     gap: 1.5rem;
     flex-direction: column;
-    &-content{
-      width:100%;
+    &-content {
+      width: 100%;
     }
     &-imageLayout {
       display: flex;
@@ -86,16 +86,23 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 15px;
+        .govuk-link {
+          color: #fff;
+          display: flex;
+          flex-direction: column;
+          gap: 0.2em;
+        }
         img {
           background: #fff;
-          margin-top: 20px;
         }
         a:nth-child(1) {
           img {
             padding: 4px;
           }
         }
-        a:nth-child(2), a:nth-child(3), a:nth-child(4){
+        a:nth-child(2),
+        a:nth-child(3),
+        a:nth-child(4) {
           img {
             padding: 4px;
           }
@@ -131,9 +138,9 @@
       margin: auto;
       padding: 10px;
       text-align: center;
-        button {
-          width: 200px
-        }
+      button {
+        width: 200px;
+      }
       &-list {
         padding: 0;
       }
@@ -160,7 +167,7 @@
       gap: 1rem;
     }
     &-quicklinks-text {
-      color: #1D70B8;
+      color: #1d70b8;
       font-size: 1.18rem;
       line-height: 1.25;
     }
@@ -198,7 +205,7 @@
         &-list {
           padding: 0;
         }
-        .govuk-width-container{
+        .govuk-width-container {
           margin: 0;
         }
       }
@@ -213,7 +220,8 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        div:nth-of-type(1), div:nth-of-type(3) {
+        div:nth-of-type(1),
+        div:nth-of-type(3) {
           margin-left: 0px;
         }
       }
@@ -227,17 +235,17 @@
           display: grid;
           grid-template-columns: repeat(1, 1fr);
         }
-    }
-  }
-  &__feeds_container {
-    &--feeds {
-      &-list {
-        padding: 0;
-      }
-      .govuk-width-container{
-        margin: 0;
       }
     }
+    &__feeds_container {
+      &--feeds {
+        &-list {
+          padding: 0;
+        }
+        .govuk-width-container {
+          margin: 0;
+        }
+      }
+    }
   }
- }
 }
