--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -46,7 +46,7 @@
         <h2 class="govuk-heading-m">Our Partners</h2>
           <div class="landingPage__partnersLogo-leftsection--logos">
            {% for item in partnerLogos %} 
-            <a class="govuk-link" href="{{ item.link }}">{{ item.title }}
+            <a class="govuk-link" href="{{ item.link }}"><span>{{ item.title }}</span>
             <img src="{{ item.imgUrl }}" title="{{ item.title }}">
             </a>
            {% endfor %}
