--- a/src/assets/sass/components/_search.scss
+++ b/src/assets/sass/components/_search.scss
@@ -98,7 +98,7 @@
     content: '';
     width: 100%;
     height: 100%;
-    background-image: govuk-image-url('view-result-button-map.png');
+    background-image: govuk-image-url('view-result-button-map.jpg');
     border-width: 2px;
     border-color: #002d18;
     border-style: solid;
