feat(Footer update): Update the footer section same as DSP Apps
I have updated the footer section styles as per the new footer design of DSP apps.

Issued Id: NCEA-263.

--- a/src/assets/sass/_root.scss
+++ b/src/assets/sass/_root.scss
@@ -19,4 +19,5 @@ $govuk-assets-path: '/natural-capital-ecosystem-assessment/assets/';
 @import './templates/results';
 @import './templates/details';
 @import './templates/feeds';
-@import './templates/about'
+@import './templates/about';
+@import './templates/footer';
