feat(ncea-contribution-attribute): Add nceaContribution section based on the nceaContribution new attribute
I have created the contribution component which contains the ncea logo flowed by some description about contribution.

I used rendered the contribution component in results page when the attribute nceaContribution having the value other then null.

The contribution value is rendered based on the API response value of string.

Also same contribution details are added in the more info section of general tab section on Abstract content below.

Issued Id: NCEA-194.

--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -2,6 +2,7 @@
 {% from "govuk/components/select/macro.njk" import govukSelect %}
 {% from "govuk/components/pagination/macro.njk" import govukPagination %}
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
+{% from "macros/ncea-contribution.njk" import nceaContribution %}
 
 {# {% from 'partials/go_to_resource/macro.njk' import goToResource %} #}
 {% if hasError %}
@@ -127,6 +128,11 @@
         <p class='search-result__content'>
           {{ item.content | safe }}
         </p>
+
+        {% if item.nceaContribution %}
+          {{nceaContribution (assetPath, item.nceaContribution)}}
+        {% endif %}
+        
         <div class='govuk-button-group search-result__button-group'>
           {# {{ goToResource({ organisationName: item.organisationName, resourceLocator: item.resourceLocator, isDetailsPage: false }) }} #}
           {{ govukButton({
