--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -46,7 +46,7 @@
 
 {% block content %}
     {% if docDetails !== undefined and docDetails.title %}
-      {% set generalHTML = details({options: detailsTabOptions.general, hasData: docDetails.title}) %}
+      {% set generalHTML = details({options: detailsTabOptions.general, hasData: docDetails.title, assetPath: assetPath}) %}
       {% set accessHtml = details({options: detailsTabOptions.access, hasData: docDetails.title}) %}
       {% set naturalHtml = detailsHeaderTable({options: detailsTabOptions.natural,  hasData: docDetails.title}) %}
       {% set qualityHtml = details({options: detailsTabOptions.quality, hasData: docDetails.title}) %}
