--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -826,3 +826,15 @@
   pointer-events: none;
   display: none;
 }
+
+.contribution {
+  align-items: center;
+  column-gap: 10px;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+  }
+}
