Added the boilerplate text of each contribution category.

--- a/src/views/macros/ncea-contribution.njk
+++ b/src/views/macros/ncea-contribution.njk
@@ -3,9 +3,17 @@
 {% macro nceaContribution(assetPath, contribution) %}
   <div class="contribution">
     <img width="100px" height="auto" src="{{ assetPath }}/images/NCEA_logo.png" title="NCEA logo" />
-    <p class='search-result__content'>
-        This work was {{contribution}} in part by Defra through the National Capital Ecosystem
-        Assessment programme (NCEA).
-    </p>
+      {% if contribution === 'supported' %}
+        <p class='search-result__content'>
+          This work was supported in part by Defra through the National Capital Ecosystem
+          Assessment programme (NCEA).
+        </p>
+      {% elseif contribution === 'funded' %}
+        <p class='search-result__content'>
+          This work was funded by Defra through the National Capital Ecosystem
+          Assessment programme (NCEA).
+        </p>
+      {% endif %}
+    
     </div>
 {% endmacro %}
