--- a/src/assets/sass/templates/_header.scss
+++ b/src/assets/sass/templates/_header.scss
@@ -2,7 +2,7 @@
   background-color: $govuk-black;
   color: govuk-colour('white');
   border-bottom: 2px solid $defra-brand;
-  font-family: 'GDSTransport', 'GDSTransport Fallback';
+  font-family: 'GDS Transport', arial, sans-serif;
 
   .navLinks {
     display: flex;
@@ -23,12 +23,13 @@
     row-gap: 10px;
     border-bottom-width: 1px;
     border-color: rgb(80 90 95);
-    grid-template-columns: repeat(1, minmax(0, 1fr));
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     align-items: center;
     color: inherit;
 
     .service-name {
       grid-column-start: 2;
+      justify-content: end;
     }
     .navLinks {
       margin: 0px;
@@ -45,20 +46,30 @@
         &:link {
           color: govuk-colour('white');
         }
-        &:visited,
-        &:focus {
+        &:visited {
           color: inherit;
+        }
+        &:focus {
+          color: $govuk-black;
+          text-decoration: underline;
+          text-decoration-thickness: 3px;
         }
       }
 
+      .divider {
+        border-left: 1px solid;
+        padding-left: 10px;
+      }
       .defra-logo {
         font-size: 1rem;
         font-weight: 400;
-        gap: 10px;
+        gap: 15px;
+        row-gap: 0px;
         flex-direction: column;
         align-items: flex-start;
         .icon svg {
-          width: 2.5rem;
+          width: 40px;
+          height: 32.63px;
           aspect-ratio: auto;
         }
       }
@@ -72,7 +83,6 @@
     display: grid;
     grid-template-rows: min-content min-content;
     column-gap: 20px;
-    row-gap: 10px;
     border-bottom-width: 1px;
     border-color: rgb(80 90 95);
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -92,14 +102,15 @@
 
     .ea-logo {
       .icon svg {
-        width: 130px;
-        height: 40px;
+        width: 128px;
+        height: 32.8px;
         aspect-ratio: auto;
       }
     }
 
     .service-name {
       text-align: center;
+      font-size: 19px;
     }
 
     .service-links {
@@ -110,33 +121,45 @@
   .menu-button {
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
     font-size: 1rem;
-    border: 0px;
+    border: 1px solid;
     background-color: inherit;
-    padding: 0px;
+    padding: 5px 10px;
     margin: 0px;
     font-family: inherit;
     cursor: pointer;
     margin-left: auto;
+    border-radius: 0.375rem;
+    border-color: rgb(147 158 164);
   }
   .menu-options {
     display: none;
     flex-direction: column;
     align-items: flex-start;
-    border: 1px solid $govuk-black;
-    box-shadow: 0px 1px $govuk-black;
+    border: 1px solid #b7bfc2;
     position: absolute;
-    top: 110%;
-    background-color: govuk-colour('white');
+    top: 100%;
+    margin-top: 5px;
+    background-color: rgb(255 255 255);
     z-index: 11;
     right: 0;
     gap: 5px;
     overflow: hidden;
-
+    box-shadow:
+      0 0 #0000,
+      0 0 #0000,
+      0 0 #0000;
+    border-radius: 0.375rem;
     .govuk-link {
-      padding: 10px;
+      padding: 5px 10px;
       width: 100%;
+      border-bottom: 1px solid #b7bfc2;
+      box-shadow: none;
+      &:focus {
+        text-decoration: underline;
+        text-decoration-thickness: 3px;
+      }
     }
   }
   .relative {
@@ -164,7 +187,7 @@
           flex-direction: row;
           align-items: center;
           .icon svg {
-            width: 3rem;
+            width: 56px;
           }
         }
       }
@@ -172,7 +195,6 @@
 
     &__secondary {
       row-gap: 0px;
-      // grid-template-columns: repeat(3, minmax(0, 1fr));
 
       .service-links {
         display: flex;
@@ -186,6 +208,19 @@
 
     .mobile-only {
       display: none;
+    }
+  }
+}
+
+@media (min-width: 46.25em) {
+  .header {
+    &__primary {
+      .navLinks {
+        .defra-logo {
+          flex-direction: row;
+          align-items: center;
+        }
+      }
     }
   }
 }
