feat(ncea-details-page): Add dataset name to the page title along with tab name
I have added dataset name to the page title followed by tab name in details page.

Issued Id: NCEA-271.

--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -79,7 +79,7 @@
           html: generalHTML
         },
         attributes: {
-          'onclick': 'changeTitle("'+pageTitles.generalTab+'")'
+          'onclick': 'changeTitle("'+pageTitle+' - '+pageTitles.generalTab+'")'
         }
       },
       {
@@ -89,7 +89,7 @@
           html: accessHtml
         },
         attributes: {
-          'onclick': 'changeTitle("'+pageTitles.accessTab+'")'
+          'onclick': 'changeTitle("'+pageTitle+' - '+pageTitles.accessTab+'")'
         }
       },
        {
@@ -99,7 +99,7 @@
           html: naturalHtml
         },
         attributes: {
-          'onclick': 'changeTitle("'+pageTitles.naturalTab+'")'
+          'onclick': 'changeTitle("'+pageTitle+' - '+pageTitles.naturalTab+'")'
         }
       },
       {
@@ -109,7 +109,7 @@
           html: qualityHtml
         },
         attributes: {
-          'onclick': 'changeTitle("'+pageTitles.qualityTab+'")'
+          'onclick': 'changeTitle("'+pageTitle+' - '+pageTitles.qualityTab+'")'
         }
       },
       {
@@ -119,7 +119,7 @@
           html: geographyHtml
         },
         attributes: {
-          'onclick': 'changeTitle("'+pageTitles.geographyTab+'")'
+          'onclick': 'changeTitle("'+pageTitle+' - '+pageTitles.geographyTab+'")'
         }
       },
       {
@@ -129,7 +129,7 @@
           html: licenseHtml
         },
         attributes: {
-          'onclick': 'changeTitle("'+pageTitles.licenseTab+'")'
+          'onclick': 'changeTitle("'+pageTitle+' - '+pageTitles.licenseTab+'")'
         }
       },
         {
@@ -139,7 +139,7 @@
           html: governanceHtml
         },
         attributes: {
-          'onclick': 'changeTitle("'+pageTitles.governanceTab+'")'
+          'onclick': 'changeTitle("'+pageTitle+' - '+pageTitles.governanceTab+'")'
         }
       }
     ]
