feat(header): Header and footer fixes
Footer

- I have added the the year to the Copyright stateme.
- All Accessibility, Cookie links are open in new tab.

Header

- On smaller screens, the title in the app header rendered at center.
- On the dropdown menu, the yellow background doesn't cover the whole option, is now fixed.
- Fixed the header navigation links to respective destinations urls and are servers from the env.
- Updated the about link icon with info icon.

Issued Id: NCEA-261.

--- a/src/assets/sass/templates/_header.scss
+++ b/src/assets/sass/templates/_header.scss
@@ -111,6 +111,7 @@
     .service-name {
       text-align: center;
       font-size: 19px;
+      justify-content: center;
     }
 
     .service-links {
@@ -144,7 +145,7 @@
     background-color: rgb(255 255 255);
     z-index: 11;
     right: 0;
-    gap: 5px;
+    gap: 0px;
     overflow: hidden;
     box-shadow:
       0 0 #0000,
@@ -188,6 +189,7 @@
           align-items: center;
           .icon svg {
             width: 56px;
+            height: 45.69px;
           }
         }
       }
