--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -86,7 +86,7 @@
 
     {% set homePage = routes.homePage %}
 
-    {{ header(loginElement, headerNavigationLinks, homePage) }}
+    {{ header(loginElement, headerNavigationLinks, homePage, routes.rootPath, eaHomeUrl, defraHomeUrl) }}
   </header>
 {% endblock %}
 
@@ -167,25 +167,48 @@
       items: [
         {
           href: routes.accessibilityStatement,
-          text: "Accessibility statement"
+          text: "Accessibility statement",
+          attributes: {
+            target: "_blanck",
+            rel: "noopener noreferrer"
+          }
         },
         {
           href: routes.cookiePolicy,
-          text: "Cookie Policy"
+          text: "Cookie Policy",
+          attributes: {
+            target: "_blanck",
+            rel: "noopener noreferrer"
+          }
         },
         {
           href: routes.termsAndConditions,
-          text: "Terms and conditions"
+          text: "Terms and conditions",
+          attributes: {
+            target: "_blanck",
+            rel: "noopener noreferrer"
+          }
         },
         {
           href: routes.privacyPolicy,
-          text: "Privacy"
+          text: "Privacy",
+          attributes: {
+            target: "_blanck",
+            rel: "noopener noreferrer"
+          }
         },
         {
           href: routes.support,
-          text: "Support"
+          text: "Support",
+          attributes: {
+            target: "_blanck",
+            rel: "noopener noreferrer"
+          }
         }
       ]
+    },
+    copyright: {
+      text: "© Crown Copyright 2025"
     }
   }) }}
   <div id="overlay" class="overlay"></div>
