--- a/src/views/macros/header.njk
+++ b/src/views/macros/header.njk
@@ -8,7 +8,7 @@
           class="govuk-link defra-logo" 
           target="_blanck"
           ref="noopener noreferrer"
-          href={{ defraHomeUrl }}
+          href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs"
         >
           <span class="icon">{{icon("defra-logo", { })}}</span>
           <span>Department for Environment Food & Rural Affairs</span>
@@ -32,7 +32,7 @@
         <span class="navLinks">
           <a 
             class="govuk-link ea-logo"
-            href={{eaHomeUrl}}
+            href="https://www.gov.uk/government/organisations/environment-agency"
           >
             <span class="icon">{{icon("ea-logo", { })}}</span>
           </a> 
