fix(pagination): Page number getting NaN
- I have fixed issue, issue is missing the hidden default page number form element in the form, So the form action is ignoring it.

Issued Id: NCEA-273.

--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -48,6 +48,7 @@
     {% if nextLevel > 3 %}
       <input type="hidden" name="srt" value="most_relevant"/>
       <input type="hidden" name="rpp" value="20"/>
+      <input type="hidden" name="pg" value="1"/>
     {% endif %}
     <input type="hidden" name="level" value="{% if nextLevel > 3 %}3{% else %}{{ nextLevel }}{% endif %}"/>
     <div class="govuk-grid-column-full govuk-!-padding-top-6">
