fix(about): About page feed text updates
- I have updated the "Latest news" and "more news" of first letter to uppercase
- Updated the feeds redirect url of "More news" link.

Issued Id: NCEA-252.

--- a/src/views/screens/about/template.njk
+++ b/src/views/screens/about/template.njk
@@ -78,7 +78,7 @@
               </li>
           </ul>
           <p class="govuk-body landingPage__feeds_container--feeds-text">
-            <a href="{{routes.homePage}}/feeds" class="govuk-link">more news</a>
+            <a href="{{routes.feeds}}" class="govuk-link">More news</a>
           </p>
         </div>
       {% endif %}
