fix(header): Update EA logo with NCEA logo and name
- I have updated the EA logo with the NCEA logo and name of the service with given name.

Issued Id: NCEA-282.

--- a/src/views/macros/header.njk
+++ b/src/views/macros/header.njk
@@ -32,9 +32,9 @@
         <span class="navLinks">
           <a 
             class="govuk-link ea-logo"
-            href="https://www.gov.uk/government/organisations/environment-agency"
+            href="{{homePage}}"
           >
-            <span class="icon">{{icon("ea-logo", { })}}</span>
+            <span class="icon">{{icon("ncea-logo", { })}}</span>
           </a> 
         </span>
         <h2 class="navLinks secondary__navLinks service-name">
@@ -42,7 +42,7 @@
            class=" govuk-link" 
            href="{{homePage}}"
           >
-           Natural capital
+           Find natural capital data
           </a> 
         </h2>
         <div class="relative mobile-only">
