--- a/src/views/macros/header.njk
+++ b/src/views/macros/header.njk
@@ -4,18 +4,18 @@
   <header class="header">
     <div class="header__primary">
       <h1 class="navLinks">
-        <a 
-          class="govuk-link defra-logo" 
+        <a
+          class="govuk-link defra-logo"
           target="_blank"
           ref="noopener noreferrer"
           href="https://www.gov.uk/government/organisations/department-for-environment-food-rural-affairs"
         >
           <span class="icon">{{icon("defra-logo", { })}}</span>
           <span>Department for Environment Food & Rural Affairs</span>
-        </a> 
+        </a>
         </h1>
        <span class="navLinks service-name">
-        <a 
+        <a
           class="govuk-link"
           target="_blank"
           ref="noopener noreferrer"
@@ -23,38 +23,40 @@
          >
           {{icon("house", { })}}
           <span class="text">Data Services Platform</span>
-        </a> 
+        </a>
        </span>
         <div class="navLinks service-links">{{loginElement | safe}}</div>
     </div>
 
     <div class="header__secondary">
         <span class="navLinks">
-          <a 
+          <a
             class="govuk-link ea-logo"
-            href="{{homePage}}"
+            target="_blank"
+            ref="noopener noreferrer"
+            href="https://www.gov.uk/government/publications/natural-capital-and-ecosystem-assessment-programme/natural-capital-and-ecosystem-assessment-programme"
           >
             <span class="icon">{{icon("ncea-logo", { })}}</span>
-          </a> 
+          </a>
         </span>
         <h2 class="navLinks secondary__navLinks service-name">
-          <a 
-           class=" govuk-link" 
+          <a
+           class=" govuk-link"
            href="{{homePage}}"
           >
            Find natural capital data
-          </a> 
+          </a>
         </h2>
         <div class="relative mobile-only">
           <button
             class="menu-button"
-            arial-expanded="false" 
+            arial-expanded="false"
             aria-controls="main-navigation"
           >
             Menu {{icon("down-arrow", { })}}
           </button>
-          <nav 
-            class="navLinks secondary__navLinks menu-options" 
+          <nav
+            class="navLinks secondary__navLinks menu-options"
             id="main-navigation"
             hidden="true"
           >
@@ -66,7 +68,7 @@
           {% endfor %}
           </nav>
         </div>
-        
+
         <nav class="navLinks secondary__navLinks service-links">
          {% for navLink in headerNavigationLinks %}
           <a class="govuk-link" href={{navLink.href}}>
@@ -75,7 +77,7 @@
           </a>
          {% endfor %}
         </nav>
-        
+
     </div>
   </header>
 {% endmacro %}
