feat(ncea-moreinfo-page): added and style the error message if there is any API failure

--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -838,3 +838,10 @@
     width: 100%;
   }
 }
+
+.moreInfo-error-msg {
+  font-size: 1rem;
+  font-weight: 700;
+  color: #d4351c;
+  font-style: normal;
+}
