--- a/src/views/screens/details/template.njk
+++ b/src/views/screens/details/template.njk
@@ -146,7 +146,7 @@
   }) }}
 
   {% else %}
-    <p>Error</p>
+    <p class="govuk-body moreInfo-error-msg">{{error}}</p>
   {% endif %}
 
   {% if docDetails.resourceLocator %}
