feat(search-result-page): update the data scope radio button labels
- As per the feedback, there is a requirement to update the radio button labels
- NCEA Metadata Only to NCEA data
- DSP and NCEA Metadata to All natural capital data

Issued Id: NCEA-285.

--- a/src/views/partials/results/scope.njk
+++ b/src/views/partials/results/scope.njk
@@ -7,13 +7,13 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="scope-{{filterInstance}}" {% if dspFilterOptions.nceaOnly %}checked{% endif %} name="{{dspFilterNames.scope}}" type="radio" value="{{dataScopeValues.ncea}}">
         <label class="govuk-label govuk-radios__label" for="scope-{{filterInstance}}">
-          NCEA Metadata Only
+          NCEA data
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="scope-all-{{filterInstance}}" {% if not dspFilterOptions.nceaOnly %}checked{% endif %} name="{{dspFilterNames.scope}}" type="radio" value="{{dataScopeValues.all}}">
         <label class="govuk-label govuk-radios__label" for="scope-all-{{filterInstance}}">
-          DSP and NCEA Metadata
+          All natural capital data
         </label>
       </div>
     </div>
