fix(search-result-page): Added the Dateset reference date in the summary section of Search Results section
- If study period field is unavailable, then publication date needs to be displayed as Dateset reference date <publication date>
- If publication date is null, then it displays the revision date or if revision date is null, then it displays the creation date
- Also updated the recordDates to datasetReferenceDate in quality Tab section that will fetch the dates from datasetReferenceDate object

Issued Id: NCEA-191.

--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -99,32 +99,40 @@
             <span class='search-result__parameter-value search-result__published-value'>{{ item.publishedBy }}</span>
           </div>
         {% endif %}
-        <div class='search-result__parameter'>
-          <span class='search-result__parameter-label search-result__study-label'>Study period</span>
-          <span class='search-result__parameter-value search-result__study-value'>
-            <span class='start'>
-              {% if item.studyPeriodStart %}
-                {{ item.studyPeriodStart }}
-              {% else %}
-                {{govukTag({
-                  text: "Unavailable",
-                  classes: "govuk-tag--grey tab-content-value__not-provided"
-                })}}
-              {% endif %}
+        {% if item.displayDataSetReferenceDate %}
+          <div class='search-result__parameter'>
+            <span class='search-result__parameter-label search-result__published-label'>Dataset reference date</span>
+            <span class='search-result__parameter-value search-result__published-value'>{{ item.dataSetReferenceDate }}</span>
+          </div>
+        {% endif %}
+        {% if not item.displayDataSetReferenceDate %}
+          <div class='search-result__parameter'>
+            <span class='search-result__parameter-label search-result__study-label'>Study period</span>
+            <span class='search-result__parameter-value search-result__study-value'>
+              <span class='start'>
+                {% if item.studyPeriodStart %}
+                  {{ item.studyPeriodStart }}
+                {% else %}
+                  {{govukTag({
+                    text: "Unavailable",
+                    classes: "govuk-tag--grey tab-content-value__not-provided"
+                  })}}
+                {% endif %}
+              </span>
+              <span>to</span>
+              <span class='end'>
+                {% if item.studyPeriodEnd %}
+                  {{ item.studyPeriodEnd }}
+                {% else %}
+                  {{govukTag({
+                    text: "Unavailable",
+                    classes: "govuk-tag--grey tab-content-value__not-provided"
+                  })}}
+                {% endif %}
+              </span>
             </span>
-            <span>to</span>
-            <span class='end'>
-              {% if item.studyPeriodEnd %}
-                {{ item.studyPeriodEnd }}
-              {% else %}
-                {{govukTag({
-                  text: "Unavailable",
-                  classes: "govuk-tag--grey tab-content-value__not-provided"
-                })}}
-              {% endif %}
-            </span>
-          </span>
-        </div>
+          </div>
+        {% endif %}
         <p class='search-result__content'>
           {{ item.content | safe }}
         </p>
@@ -132,7 +140,7 @@
         {% if item.nceaContribution %}
           {{nceaContribution (assetPath, item.nceaContribution)}}
         {% endif %}
-        
+
         <div class='govuk-button-group search-result__button-group'>
           {# {{ goToResource({ organisationName: item.organisationName, resourceLocator: item.resourceLocator, isDetailsPage: false }) }} #}
           {{ govukButton({
