fix(search-result-page): Add the Dynamic labels based upon the data reference date
- If publication date is not null, then the label would be Dataset publication date
- If revision date is not null, then the label would be Dataset revision date
- If creation date is not null, then the label would be Dataset creation date
- Priority goes like this publication>revision>creation

Issued Id: NCEA-191.

--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -101,7 +101,7 @@
         {% endif %}
         {% if item.displayDataSetReferenceDate %}
           <div class='search-result__parameter'>
-            <span class='search-result__parameter-label search-result__published-label'>Dataset reference date</span>
+            <span class='search-result__parameter-label search-result__published-label'>{{ item.dataSetReferenceLabel }}</span>
             <span class='search-result__parameter-value search-result__published-value'>{{ item.dataSetReferenceDate }}</span>
           </div>
         {% endif %}
