--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -845,3 +845,15 @@
   color: #d4351c;
   font-style: normal;
 }
+
+.copy-link-btn {
+  text-align: left;
+  padding: 0;
+  margin: 0;
+  color: #079050;
+  font-size: 16px;
+  background: none;
+  border: none;
+  text-decoration: none;
+  box-shadow: 0 1px 0 #079050;
+}
