feat(Category-Page): Monetary and non-monetary categories
Handled UI and submission behavior for "Monetary" and "Non-monetary" categories when no subcategories are returned from the API. It displays the message: "This category has no subcategories, so all its records will be selected." for Monetary and Non-monetary under the subcategory section .The IDs (lvl2_009 for Monetary and lvl2_010 for Non-monetary) are included as hidden inputs in the form, so they are passed in the search results API call.

IssueID NCEA-301

--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -119,6 +119,8 @@
 </div>{% endblock %}{% block bodyEnd %}
 {{ super() }}
 <script type="module" src="{{ assetPath }}/scripts/dataModal.js"></script>
+<script src="{{ assetPath }}/scripts/jquery.js"></script>
+<script type="module" src="{{ assetPath }}/scripts/categorySearch.js"></script>
 <script>
   function handleError(group, action) {
     const formGroup = group.closest('.govuk-form-group');
