Fix(Search-Result-Page): Error validation check for Monetary and non-monetary categories
In this commit, skip the form validation if there is only Monetary and non-monetary categories are present

IssueID NCEA-301

--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -34,7 +34,7 @@
     {% include "partials/results_count/template.njk" %}
     <div class='classifier-error-summary' id='errorBlock' style="display:none;">
       {{ govukErrorSummary({
-         titleText: "There is a problem",
+         titleText: "There is a problem11111",
          errorList: [
         {
            text: "You must select a theme to continue"
@@ -140,19 +140,4 @@
       }
     }
   }
-  document.getElementById('classifier-search').addEventListener('submit', function (event) {
-    const selectedCheckboxes = Array.from(document.querySelectorAll('input[name="parent[]"]:checked'));
-    const checkboxGroups = document.querySelectorAll('.govuk-checkboxes');
-    const isAnyCheckboxNotSelected = selectedCheckboxes.length === 0;
-    if (isAnyCheckboxNotSelected) {
-      event.preventDefault();
-      document
-        .getElementById("errorBlock")
-        .style
-        .display = '';
-      checkboxGroups.forEach(group => handleError(group, 'apply'));
-    } else {
-      checkboxGroups.forEach(group => handleError(group, 'remove'));
-    }
-  });
 </script>{% endblock %}
