Fix(Category-Pages): Error validation check for Monetary and non-monetary categories
Revert the error  message changes

IssueID NCEA-301

--- a/src/views/screens/guided_search/classifier_selection.njk
+++ b/src/views/screens/guided_search/classifier_selection.njk
@@ -34,7 +34,7 @@
     {% include "partials/results_count/template.njk" %}
     <div class='classifier-error-summary' id='errorBlock' style="display:none;">
       {{ govukErrorSummary({
-         titleText: "There is a problem11111",
+         titleText: "There is a problem",
          errorList: [
         {
            text: "You must select a theme to continue"
