--- a/src/assets/sass/templates/_about.scss
+++ b/src/assets/sass/templates/_about.scss
@@ -13,6 +13,16 @@
     flex-direction: column;
     &-content {
       width: 100%;
+      &-actions {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        &-button {
+          width: 50%;
+          display: flex;
+          justify-content: center;
+        }
+      }
     }
     &-imageLayout {
       display: flex;
@@ -20,6 +30,43 @@
       gap: 20px;
       img:nth-child(2) {
         display: none;
+      }
+    }
+  }
+  &__articles {
+    margin-top: 40px;
+    margin-bottom: 30px;
+    &-container {
+      display: flex;
+      gap: 50px;
+      flex-wrap: wrap;
+      &--article {
+        flex: 1 1 300px;
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        img {
+          width: 100%;
+          height: auto;
+          border-radius: 4px;
+          margin-bottom: 10px;
+        }
+        &-imageTitle {
+          text-align: center;
+          margin-bottom: 5px;
+        }
+        &-text {
+          margin-bottom: 10px;
+          span {
+            font-weight: bold;
+          }
+        }
+        &-link {
+          width: 18%;
+          margin-bottom: 8px;
+          display: inline-block;
+          font-size: 20px;
+        }
       }
     }
   }
@@ -71,14 +118,7 @@
     overflow: hidden;
     margin-top: 20px;
     &-leftsection {
-      width: 50%;
-      background-color: #008938;
-      color: white;
-      padding: 20px;
-      text-align: center;
-      h2 {
-        color: white;
-      }
+      width: 100%;
       &--logos {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -131,13 +171,11 @@
   &__feeds_container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
     gap: 10%;
     &--feeds {
-      width: 70%;
+      width: 100%;
       margin: auto;
-      padding: 10px;
       text-align: center;
       button {
         width: 200px;
@@ -148,6 +186,7 @@
     }
   }
   &__links_container {
+    padding-left: 10rem;
     text-align: center;
     width: 50%;
     height: 140px;
@@ -161,6 +200,14 @@
       div:nth-of-type(3) {
         margin-left: 72px;
       }
+      div:nth-of-type(4) {
+        margin-left: 154px;
+        margin-top: 6px;
+      }
+      div:nth-of-type(5) {
+        margin-left: 41px;
+        margin-top: 6px;
+      }
     }
     &-quicklinks-list {
       display: flex;
@@ -171,6 +218,35 @@
       color: #1d70b8;
       font-size: 1.18rem;
       line-height: 1.25;
+    }
+  }
+  &__partners {
+    margin-top: 94px;
+    &-container {
+      display: flex;
+      gap: 5px;
+      flex-wrap: wrap;
+      align-items: end;
+      a:nth-child(1) {
+        img {
+          width:9rem;
+        }
+      }
+      a:nth-child(2) {
+        img {
+          width:6rem;
+        }
+      }
+      a:nth-child(4) {
+        img {
+          width:11rem;
+        }
+      }
+      a:nth-child(5), a:nth-child(6) {
+        img {
+          width:10rem;
+        }
+      }
     }
   }
 
@@ -198,10 +274,18 @@
         }
       }
     }
+    &__articles {
+      &-container {
+      display: flex;
+      gap: 50px;
+      flex-wrap: wrap;
+    }
+    }
     &__feeds_container {
       display: flex;
       flex-direction: row;
       &--feeds {
+        width: 70%;
         text-align: left;
         &-list {
           padding: 0;
@@ -214,18 +298,32 @@
     &__partnersLogo {
       display: flex;
       flex-direction: row;
+      &-leftsection {
+        width: 50%;
+      }
     }
     &__links_container {
+      padding-left: 0px;
       text-align: left;
+      padding: 10px;
       &-quicklinks {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
+        gap:10px;
         div:nth-of-type(1),
         div:nth-of-type(3) {
           margin-left: 0px;
         }
+        div:nth-of-type(4),
+        div:nth-of-type(5) {
+          margin-left: 0px;
+          margin-top: 0px;
+        }
       }
+    }
+    &__partners {
+      margin-top:0px;
     }
   }
 
